<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PnsTestHarness</string>
    <string name="welcome_message">PnsTestHarness v1.0</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notifications_list">Received Notifications</string>
    <string name="show_messages_button_text">Show Messages</string>
    <string name="clear_messages_button_text">Clear Messages</string>
    <string name="send_app_token_button_text">Send App Token</string>
    <string name="app_version">2.0</string>
    <string name="recall_app_token_button_text">RECALL APP TOKEN</string>
    <string name="refresh_app_token_button_text">REFRESH TOKEN</string>

</resources>
