<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAlertView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textAlertView"
        android:orientation="vertical"
        android:weightSum="5">

        <Button
            android:id="@+id/button_show_msgs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_messages_button_text"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_clear_msgs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear_messages_button_text"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_send_app_token"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_app_token_button_text"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_getToken"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recall_app_token_button_text"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/button_RefreshToken"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh_app_token_button_text"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</RelativeLayout>
